Added better text and visalign logo

--- a/main.html
+++ b/main.html
@@ -26,19 +26,17 @@
 <body>
 
   <!-- Hero Section -->
-  <section class="hero is-large hero-image">
+  <section class="hero is-medium hero-image">
     <div class="hero-body">
       <div class="container">
         <div class="columns">
-            <div class="column is-3">
-                
-            </div>
+            <div class="column is-2"></div>
           <div class="column is-7">
             <h1 class="title is-1 has-text-white">
               SuperVoid Lab
             </h1>
             <h2 class="subtitle is-4 has-text-white">
-              Dedicated to bridging the gap between cutting-edge technology and scientific research.
+              Making applications and software
             </h2>
           </div>
         </div>
@@ -49,20 +47,21 @@
   <!-- Mobile App Section -->
   <section id="app" class="section app-store-section">
     <div class="container">
-      <div class="columns is-vcentered">
-        <div class="column is-6">
-          <h2 class="title is-2 has-text-white">Visalign</h2>
-          <h3 class="subtitle is-4 has-text-white-bis">Coming Soon to Apple App Store</h3>
+      <div class="columns">
+        <div class="column is-2"></div>
+        <div class="column is-4">
+          <img src="./visalign_360.png">
           <p class="is-size-5 has-text-white-ter mb-5">
-            Align your face across different photos to accurately track changes in your skin over time. Monitor progress, compare routines, and see what truly works for you—all with precise facial alignment for consistent before-and-after comparisons. 
+            Align your face across different photos to accurately track changes in your skin over time.
           </p>
           <div class="content has-text-white-ter">
             <ul>
-              <li>Upload pictures that are automatically aligned</li>
-              <li>Compare with an easy to use slider</li>
-              <li>Add tags to compare common causes that effect your skin care routine</li>
+              <li>Monitor progress</li>
+              <li>Compare routines</li>
+              <li>Discover what works for you</li>
             </ul>
           </div>
+          <h3 class="is-size-7 is-4 has-text-white-bis">Coming Soon to Apple App Store</h3>
         </div>
       </div>
     </div>
