Added supervoid lab icon; Added a screenshot of the app

--- a/main.html
+++ b/main.html
@@ -26,17 +26,16 @@
 <body>
 
   <!-- Hero Section -->
-  <section class="hero is-medium hero-image">
+  <section class="hero is-large hero-image">
     <div class="hero-body">
       <div class="container">
-        <div class="columns">
-            <div class="column is-2"></div>
-          <div class="column is-7">
-            <h1 class="title is-1 has-text-white">
-              SuperVoid Lab
-            </h1>
+        <div class="columns is-centered">
+          <div class="column is-4">
+            <div class="is-3">
+              <img src="./supervoid_icon.png">
+            </div>
             <h2 class="subtitle is-4 has-text-white">
-              Making applications and software
+              Emerged in a tiny little corner of our universe to build and create
             </h2>
           </div>
         </div>
@@ -47,8 +46,7 @@
   <!-- Mobile App Section -->
   <section id="app" class="section app-store-section">
     <div class="container">
-      <div class="columns">
-        <div class="column is-2"></div>
+      <div class="columns is-centered">
         <div class="column is-4">
           <img src="./visalign_360.png">
           <p class="is-size-5 has-text-white-ter mb-5">
@@ -56,12 +54,15 @@
           </p>
           <div class="content has-text-white-ter">
             <ul>
-              <li>Monitor progress</li>
-              <li>Compare routines</li>
-              <li>Discover what works for you</li>
+              <li>Monitor progress within a collage of photos</li>
+              <li>Compare routines with different collages</li>
+              <li>Discover what works for you by tagging images</li>
             </ul>
           </div>
-          <h3 class="is-size-7 is-4 has-text-white-bis">Coming Soon to Apple App Store</h3>
+          <h3 class="is-size-7 is-4 has-text-white-bis">Coming soon!</h3>
+        </div>
+        <div class="column is-3">
+          <img src="./visalign_screenshot.png">
         </div>
       </div>
     </div>
