--- a/main.html
+++ b/main.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Supervoid Lab | Advanced Scientific Analytics</title>
+  <title>Supervoid Lab</title>
   <!-- Bulma CSS from CDN -->
   <link rel="stylesheet" href="./bulma.min.css">
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" type="image/x-icon" href="./s_icon.png">
   <style>
     .hero-image {
       background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('./space-mountain.jpg') no-repeat center center;
